# multi-function-pc-remote

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/pcremote/app/: MainActivity.kt
android/app/src/main/java/com/pcremote/app/network/: RemoteConnection.kt
android/app/src/main/java/com/pcremote/app/ui/theme/: Theme.kt
desktop/: CMakeLists.txt
desktop/src/: filetransfer.cpp  filetransfer.h  inputcontroller.cpp  inputcontroller.h  main.cpp  mediacontroller.cpp  mediacontroller.h  screenshare.cpp  screenshare.h  server.cpp  server.h  systemcontroller.cpp  systemcontroller.h
ios/: README.md
ios/PCRemote/: Info.plist  PCRemoteApp.swift
ios/PCRemote.xcodeproj/: project.pbxproj
ios/PCRemote/Network/: ConnectionManager.swift
ios/PCRemote/Views/: ConnectView.swift  ContentView.swift  FileTransferView.swift  InputControlView.swift  MediaControlView.swift  ScreenShareView.swift  SystemControlView.swift
linux/: README.md  meson.build
linux/data/: com.pcremote.app.desktop  com.pcremote.app.gschema.xml
linux/src/: connection.c  connection.h  file_view.c  file_view.h  input_view.c  input_view.h  main.c  media_view.c  media_view.h  screen_view.c  screen_view.h  system_view.c  system_view.h  window.c  window.h
web/: index.html  package.json
web/src/: App.vue  main.js
web/src/components/: RemoteControl.vue
